tests/parser/statement_assign_err.expected
Syntax Error: line 6:
Unexpected token (TOK_ID, 'something'), likely missing a(n)  
  'TOK_SEMICOLON' or
Possibly due to malformed or missing:
  Non-terminal: 'If Statement' or
  Non-terminal: 'While Statement' or
  Non-terminal: 'Write Statement' or
  Non-terminal: 'Read Statement' or
  Non-terminal: 'Case'
