tests/parser/statement_assign_err.mtp
begin
	(*Missing Semicolon Error*)

	(*assignment statement: with factor (constant)*)
	something := 10
	something := 22;
end
.